Fixing horizontal scroll on mobile

--- a/sass/components/_tiles.scss
+++ b/sass/components/_tiles.scss
@@ -8,6 +8,7 @@
 
   width: calc(100% - 16px);
   max-width: 1920px;
+  overflow: hidden;
 
   list-style: none;
 
